[package]
authors = ["SET001 <settydark@gmail.com>"]
categories = ["game-development"]
description = "Scroller plugin for Bevy"
edition = "2021"
exclude = ["assets", "examples"]
keywords = ["bevy", "scroller"]
license = "MIT OR Apache-2.0"
name = "bevy_scroller"
readme = "README.md"
repository = "https://github.com/SET001/bevy_scroller"
version = "0.1.4"

[dependencies]
bevy = "0.11.3"
bevy_editor_pls = { version = "0.5.0", optional = true }
fast_poisson = "1.0.0"
rand = "0.8.5"
tile_bitmasking = "0.1.0"

[features]
dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]

[dev-dependencies]
bevy_ecs_tilemap = "0.11.1"
rstest = "0.18.2"
