[package]
authors = ["SET001 <settydark@gmail.com>"]
categories = ["game-development"]
description = "Scroller plugin for Bevy"
edition = "2021"
exclude = ["assets", "examples"]
keywords = ["bevy", "scroller"]
license = "MIT OR Apache-2.0"
name = "bevy_scroller"
readme = "README.md"
repository = "https://github.com/SET001/bevy_scroller"
version = "0.2.0"

[dependencies]
bevy = "0.12.0"
bevy_editor_pls = { version = "0.6.0", optional = true }
bevy_scroller_macros = { version = "0.1.0", path = "macros" }
fast_poisson = { version = "1.0.0", features = ["single_precision"] }
rand = "0.8.5"

[features]
dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]

[dev-dependencies]
rstest = "0.18.2"

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
