[package]
authors = ["SET001 <settydark@gmail.com>"]
categories = ["game-development"]
description = "Scroller plugin for Bevy"
edition = "2021"
exclude = ["assets", "examples"]
keywords = ["bevy", "scroller"]
license = "MIT OR Apache-2.0"
name = "bevy_scroller"
readme = "README.md"
repository = "https://github.com/SET001/bevy_scroller"
version = "0.3.0"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
  "bevy_sprite",
] }
bevy_editor_pls = { version = "0.8.1", optional = true }
fast_poisson = { version = "1.0.0", features = [
  "single_precision",
], optional = true }
rand = "0.8.5"
iyes_perf_ui = {version="0.2.3"}

[features]
dev = ["bevy/bevy_gizmos", "bevy/dynamic_linking", "dep:bevy_editor_pls"]
poisson = ["dep:fast_poisson"]

[dev-dependencies]
rstest = "0.18.2"

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "poisson"
required-features = ["poisson"]
